--- a/index.css
+++ b/index.css
@@ -46,7 +46,8 @@ header{
 
 header figure{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
 
 div figure img{
